service ok, up fission and testing local.

--- a/func/.env
+++ b/func/.env
@@ -1,3 +1,3 @@
 ZENDESK_EMAIL = "Tech@lionx.com.br"
 ZENDESK_PASSWORD = "bezfiz-dyhqu3-noqmEg"
-ZENDESK_SUBDOMAIN = "https://sigame.zendesk.com/agent/dashboard"
+ZENDESK_SUBDOMAIN = "sigame"
