update libs and deploy.sh

--- a/specs/function-update-comment-fn.yaml
+++ b/specs/function-update-comment-fn.yaml
@@ -1,14 +1,14 @@
 include:
 - ./func/*
 kind: ArchiveUploadSpec
-name: func-S8QY
+name: func-jDtH
 
 ---
 apiVersion: fission.io/v1
 kind: Package
 metadata:
   creationTimestamp: null
-  name: update-comment-fn-bb960162-3dd0-41c8-ac7f-369703635e0b
+  name: update-comment-fn-1d5aaef5-e343-48a4-9140-f1f946d82989
   namespace: default
 spec:
   deployment:
@@ -19,10 +19,10 @@ spec:
   source:
     checksum: {}
     type: url
-    url: archive://func-S8QY
+    url: archive://func-jDtH
 status:
   buildstatus: pending
-  lastUpdateTimestamp: "2022-03-03T16:57:02Z"
+  lastUpdateTimestamp: "2022-03-04T19:17:23Z"
 
 ---
 apiVersion: fission.io/v1
@@ -47,9 +47,9 @@ spec:
   functionTimeout: 60
   idletimeout: 120
   package:
-    functionName: main.fn
+    functionName: main.update_ticket_comments
     packageref:
-      name: update-comment-fn-bb960162-3dd0-41c8-ac7f-369703635e0b
+      name: update-comment-fn-1d5aaef5-e343-48a4-9140-f1f946d82989
       namespace: default
   requestsPerPod: 1
   resources: {}
