--- a/func/requirements.txt
+++ b/func/requirements.txt
@@ -15,6 +15,7 @@ cffi==1.15.0
 charset-normalizer==2.0.12
 click==8.0.4
 cryptography==36.0.1
+etria-logger==0.1.8
 Flask==2.0.3
 frozenlist==1.3.0
 heimdall-client==2.2.0
