--- a/func/.env
+++ b/func/.env
@@ -1,3 +1,3 @@
 ZENDESK_EMAIL = "Tech@lionx.com.br"
-ZENDESK_PASSWORD = "bezfiz-dyhqu3-noqmEg"
+ZENDESK_PASSWORD = FILL_PASSWORD_HERE
 ZENDESK_SUBDOMAIN = "sigame"
