--- a/func/requirements.txt
+++ b/func/requirements.txt
@@ -1,42 +1,6 @@
---extra-index-url https://backend:dc222fa6-452f-4253-a2fd-a52e7ba2e7e9@nexus.sigame.com.br/repository/pypi/simple
-aioboto3==9.3.1
-aiobotocore==2.1.0
-aiohttp==3.8.1
-aioitertools==0.10.0
-aioredis==2.0.1
-aiosignal==1.2.0
-async-timeout==4.0.2
-attrs==21.4.0
-boto3==1.20.24
-botocore==1.23.24
-cachetools==5.0.0
-certifi==2021.10.8
-cffi==1.15.0
-charset-normalizer==2.0.12
-click==8.0.4
-cryptography==36.0.1
-etria-logger==0.1.8
-Flask==2.0.3
-frozenlist==1.3.0
+--extra-index-url https://backend:<FILL_PASSWORD_HERE>@nexus.sigame.com.br/repository/pypi/simple
+boto3==1.21.21
+flask==2.1.1
 heimdall-client==2.2.0
-idna==3.3
-itsdangerous==2.1.0
-Jinja2==3.0.3
-jmespath==0.10.0
-jwt==1.3.1
-MarkupSafe==2.1.0
-multidict==6.0.2
-pycparser==2.21
 pydantic==1.9.0
-python-dateutil==2.8.2
-python-decouple==3.6
-pytz==2021.3
-requests==2.27.1
-s3transfer==0.5.2
-six==1.16.0
-typing-extensions==4.1.1
-urllib3==1.26.8
-Werkzeug==2.0.3
-wrapt==1.13.3
-yarl==1.7.2
 zenpy==2.0.24
