--- a/specs-dev/env-update-ticket-env.yaml
+++ b/specs-dev/env-update-ticket-env.yaml
@@ -22,7 +22,7 @@ spec:
     image: nexus.sigame.com.br/python-env-3.8:0.0.5
     podspec:
       containers:
-        - name: get-ticket-details-env
+        - name: update-ticket-env
           env:
             - name: ROOT_LOG_LEVEL
               value: "INFO"
@@ -34,5 +34,26 @@ spec:
               value: "bezfiz-dyhqu3-noqmEg"
             - name: ZENDESK_SUBDOMAIN
               value: "sigame"
-
+            - name: HEIMDALL_BUCKET_NAME_KEY
+              value: "auth-gateway-keys-dev"
+            - name: HEIMDALL_AWS_ACCESS_KEY_ID
+              value: "AKIATZVFXI25USQWCS5O"
+            - name: HEIMDALL_AWS_SECRET_ACCESS_KEY
+              value: "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"
+            - name: HEIMDALL_REGION_NAME
+              value: "sa-east-1"
+            - name: HEIMDALL_FILE_BUCKET_NAME
+              value: "heimdall_rsa"
+            - name: HEIMDALL_JWT_REQUIRED_FIELDS
+              value: "[]"
+            - name: HEIMDALL_REDIS_HOST
+              value: "172.30.19.183"
+            - name: HEIMDALL_REDIS_PORT
+              value: "6379"
+            - name: HEIMDALL_REDIS_DB
+              value: "0"
+            - name: HEIMDALL_REDIS_USER
+              value: "bnd"
+            - name: HEIMDALL_REDIS_PASSWORD
+              value: "93uOKu5H"
   version: 2
