--- a/func/requirements.txt
+++ b/func/requirements.txt
@@ -1,4 +1,4 @@
---extra-index-url https://backend:<FILL_PASSWORD_HERE>@nexus.sigame.com.br/repository/pypi/simple
+--extra-index-url https://backend:dc222fa6-452f-4253-a2fd-a52e7ba2e7e9@nexus.sigame.com.br/repository/pypi/simple
 boto3==1.21.21
 flask==2.1.1
 heimdall-client==2.2.0
