--- a/specs-dev/env-update-ticket-env.yaml
+++ b/specs-dev/env-update-ticket-env.yaml
@@ -33,7 +33,7 @@ spec:
             - name: ZENDESK_PASSWORD
               value: "bezfiz-dyhqu3-noqmEg"
             - name: ZENDESK_SUBDOMAIN
-              value: "sigame"
+              value: "ligainvest"
             - name: HEIMDALL_BUCKET_NAME_KEY
               value: "auth-gateway-keys-dev"
             - name: HEIMDALL_AWS_ACCESS_KEY_ID
@@ -53,7 +53,7 @@ spec:
             - name: HEIMDALL_REDIS_DB
               value: "0"
             - name: HEIMDALL_REDIS_USER
-              value: "bnd"
+              value: "heimdal"
             - name: HEIMDALL_REDIS_PASSWORD
-              value: "jkl321pqr"
+              value: "LLOnmUUffhaUHnewIz"
   version: 2
