--- a/specs-prod/env-update-ticket-env.yaml
+++ b/specs-prod/env-update-ticket-env.yaml
@@ -28,9 +28,9 @@ spec:
             - name: ETRIA_LOG_LEVEL
               value: "INFO"
             - name: ZENDESK_EMAIL
-              value: "Tech@lionx.com.br"
+              value: "zendesk@ligainvest.com.br"
             - name: ZENDESK_PASSWORD
-              value: "bezfiz-dyhqu3-noqmEg"
+              value: "5FaDQ&7C4GOPc*vm!Pwyp"
             - name: ZENDESK_SUBDOMAIN
               value: "ligainvest"
             - name: HEIMDALL_BUCKET_NAME_KEY
