--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,8 @@ flask==2.1.1
 heimdall-client==2.3.1
 pydantic==1.9.0
 zenpy==2.0.24
+
+uvloop==0.17.0
+uvicorn==0.20.0
+asgiref==3.5.2
+hypercorn==0.13.2
