--- a/specs-dev/function-sup-tckt-comment-fn.yaml
+++ b/specs-dev/function-sup-tckt-comment-fn.yaml
@@ -1,55 +1,61 @@
 include:
-- ./func/*
+- fission.py
 kind: ArchiveUploadSpec
-name: func-635h
+name: fission-py-P34h
 
 ---
 apiVersion: fission.io/v1
 kind: Package
 metadata:
   creationTimestamp: null
-  name: update-ticket-fn-1b8a9742-85df-4a4b-91cf-b2eeb4904f51
+  name: sup-tckt-comment-fn-48039350-e3da-4e08-80c8-343f66779ebc
   namespace: default
 spec:
   deployment:
     checksum: {}
+    type: url
+    url: archive://fission-py-P34h
   environment:
-    name: update-ticket-env
+    name: sup-tckt-comment-env
     namespace: default
   source:
     checksum: {}
-    type: url
-    url: archive://func-635h
 status:
-  buildstatus: pending
-  lastUpdateTimestamp: "2022-07-12T14:13:26Z"
+  buildstatus: none
+  lastUpdateTimestamp: "2023-01-06T20:15:51Z"
 
 ---
 apiVersion: fission.io/v1
 kind: Function
 metadata:
   creationTimestamp: null
-  name: update-ticket-fn
+  name: sup-tckt-comment-fn
   namespace: default
 spec:
   InvokeStrategy:
     ExecutionStrategy:
-      ExecutorType: poolmgr
-      MaxScale: 0
-      MinScale: 0
+      ExecutorType: newdeploy
+      MaxScale: 3
+      MinScale: 1
       SpecializationTimeout: 120
       TargetCPUPercent: 0
+      hpaMetrics:
+      - resource:
+          name: cpu
+          target:
+            averageUtilization: 80
+            type: Utilization
+        type: Resource
     StrategyType: execution
   concurrency: 500
   environment:
-    name: update-ticket-env
+    name: sup-tckt-comment-env
     namespace: default
   functionTimeout: 60
   idletimeout: 120
   package:
-    functionName: main.update_ticket_comments
     packageref:
-      name: update-ticket-fn-1b8a9742-85df-4a4b-91cf-b2eeb4904f51
+      name: sup-tckt-comment-fn-48039350-e3da-4e08-80c8-343f66779ebc
       namespace: default
-  requestsPerPod: 1
+  requestsPerPod: 10000
   resources: {}
