--- a/specs-uat/route-sup-tckt-comment-rt.yaml
+++ b/specs-uat/route-sup-tckt-comment-rt.yaml
@@ -2,13 +2,13 @@ apiVersion: fission.io/v1
 kind: HTTPTrigger
 metadata:
   creationTimestamp: null
-  name: update-ticket-rt
+  name: sup-tckt-comment-rt
   namespace: default
 spec:
   createingress: false
   functionref:
     functionweights: null
-    name: update-ticket-fn
+    name: sup-tckt-comment-fn
     type: name
   host: ""
   ingressconfig:
