"build: changed fission strategy to poolmg"

--- a/specs-uat-old-new-deploy/env-sup-tckt-comment-env.yaml
+++ b/specs-uat-old-new-deploy/env-sup-tckt-comment-env.yaml
@@ -5,17 +5,17 @@ metadata:
   name: sup-tckt-comment-env
   namespace: default
 spec:
+  builder:
+    container:
+      name: ""
+      resources: {}
   imagepullsecret: nexus-v3
   keeparchive: false
-  poolsize: 2
-  resources:
-    requests:
-      cpu: 128m
-      memory: 128Mi
-    limits:
-      cpu: 256m
-      memory: 256Mi
+  resources: {}
   runtime:
+    container:
+      name: ""
+      resources: {}
     image: nexus.sigame.com.br/fission-support-ticket-add-comment:0.1.0-0
     podspec:
       containers:
@@ -45,5 +45,4 @@ spec:
               value: "[]"
             - name: HEIMDALL_REDIS_URL
               value: "redis://heimdal:FBJAnjkqw21yjewkDSA@172.30.19.183:6379?db=1"
-  terminationGracePeriod: 3
   version: 3
