--- a/specs-dev/env-sup-tckt-comment-env.yaml
+++ b/specs-dev/env-sup-tckt-comment-env.yaml
@@ -5,17 +5,17 @@ metadata:
   name: sup-tckt-comment-env
   namespace: default
 spec:
-  builder:
-    container:
-      name: ""
-      resources: {}
   imagepullsecret: nexus-v3
   keeparchive: false
-  resources: {}
+  poolsize: 2
+  resources:
+    requests:
+      cpu: 128m
+      memory: 128Mi
+    limits:
+      cpu: 256m
+      memory: 256Mi
   runtime:
-    container:
-      name: ""
-      resources: {}
     image: nexus.sigame.com.br/fission-support-ticket-add-comment:0.1.0-0
     podspec:
       containers:
@@ -45,4 +45,5 @@ spec:
               value: "[]"
             - name: HEIMDALL_REDIS_URL
               value: "redis://heimdal:LLOnmUUffhaUHnewIz@172.30.11.235:6379?db=1"
+  terminationGracePeriod: 3
   version: 3
