--- a/specs-uat-old-new-deploy/function-sup-tckt-comment-fn.yaml
+++ b/specs-uat-old-new-deploy/function-sup-tckt-comment-fn.yaml
@@ -34,8 +34,18 @@ metadata:
 spec:
   InvokeStrategy:
     ExecutionStrategy:
-      ExecutorType: poolmgr
+      ExecutorType: newdeploy
+      MaxScale: 3
+      MinScale: 1
       SpecializationTimeout: 120
+      TargetCPUPercent: 0
+      hpaMetrics:
+      - resource:
+          name: cpu
+          target:
+            averageUtilization: 80
+            type: Utilization
+        type: Resource
     StrategyType: execution
   concurrency: 500
   environment:
@@ -48,10 +58,4 @@ spec:
       name: sup-tckt-comment-fn-48039350-e3da-4e08-80c8-343f66779ebc
       namespace: default
   requestsPerPod: 10000
-  resources:
-    requests:
-      cpu: 128m
-      memory: 128Mi
-    limits:
-      cpu: 256m
-      memory: 256Mi
+  resources: {}
